license not working

--- a/pom.xml
+++ b/pom.xml
@@ -112,4 +112,5 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <description>Graphical PerfCake scenario editor for NetBeans</description>
 </project>
