--- a/src/main/resources/org/perfcake/pc4nb/wizards/Bundle.properties
+++ b/src/main/resources/org/perfcake/pc4nb/wizards/Bundle.properties
@@ -1,8 +1,6 @@
 
-AddReporterVisualPanel1.reporterTypeLabel.text=Validator Type
+AddReporterVisualPanel1.reporterTypeLabel.text=Reporter Type
 AddReporterVisualPanel1.propertiesLabel.text=Properties
-AddReporterVisualPanel1.addPropertyButton.text=Add Property
-AddReporterVisualPanel1.deletePropertyButton.text=Delete Property
 AddPropertyDialog.propertyNameTextField.text=
 AddPropertyDialog.propertyValueTextField.text=
 AddPropertyDialog.valueLabel.text=value:
