palette, refactoring, properties
Added Palette and drag and drop support,
refactoring of models and views,
table of properties by reflection (not rly functoning as needed)

--- a/src/main/resources/org/perfcake/pc4nb/wizards/Bundle.properties
+++ b/src/main/resources/org/perfcake/pc4nb/wizards/Bundle.properties
@@ -12,3 +12,5 @@ AddReporterVisualPanel1.destinationsLabel.text=Destinations
 AddReporterVisualPanel1.addDestinationButton.text=Add Destination
 AddReporterVisualPanel1.deleteDestinationButton.text=Delete Destination
 AddReporterVisualPanel1.editDestinationButton.text=Edit Destination
+AddReporterVisualPanel1.jTable1.columnModel.title3=Title 4
+AddReporterVisualPanel1.jTable1.columnModel.title2=Title 3
