Wizard polishing, changed project template

--- a/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
+++ b/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
@@ -85,3 +85,7 @@ ValidatorVisualPanel.validatorIdLabel.text=Validator Id:
 ValidatorVisualPanel.propertiesLabel.text=Properties:
 ScenarioPropertiesVisualPanel.scenarioPropertiesLabel.text=Scenario Properties:
 MessageVisualPanel.uriTextField.text=
+MessageVisualPanel.addPropertyRow.text=Add
+MessageVisualPanel.deleteProperties.text=Delete
+ScenarioPropertiesVisualPanel.addPropertyButton.text=Add
+ScenarioPropertiesVisualPanel.deletePropertyButton.text=Delete
