--- a/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
+++ b/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
@@ -40,10 +40,8 @@ ValidationVisualPanel.deleteValidatorButton.text=Delete
 ValidatorVisualPanel.validatorIdTextField.text=
 ValidatorVisualPanel.propertiesTable.columnModel.title1_1=Value
 ValidatorVisualPanel.propertiesTable.columnModel.title0_1=Name
-GeneratorVisualPanel.propertiesLabel.text=Properties
-GeneratorVisualPanel.periodTypeLabel.text=Period Type
+GeneratorVisualPanel.propertiesLabel.text=Properties:
 GeneratorVisualPanel.generatorTypeLabel.text=Generator Type
-GeneratorVisualPanel.periodValueLabel.text=Period Value:
 GeneratorVisualPanel.threadsLabel.text=Threads:
 ReporterVisualPanel.editDestinationButton.text=Edit Destination
 ReporterVisualPanel.deleteDestinationButton.text=Delete Destination
@@ -89,3 +87,6 @@ MessageVisualPanel.addPropertyRow.text=Add
 MessageVisualPanel.deleteProperties.text=Delete
 ScenarioPropertiesVisualPanel.addPropertyButton.text=Add
 ScenarioPropertiesVisualPanel.deletePropertyButton.text=Delete
+GeneratorVisualPanel.durationValueLabel.text=Duration Value:
+GeneratorVisualPanel.durationTypeLabel.text=Duration Type:
+ReportingVisualPanel.reportersLabel.text=Reporters:
