Switched to PerfCake 5.0

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,8 @@
         <dependency>
             <groupId>org.perfcake</groupId>
             <artifactId>perfcake</artifactId>
-            <version>${perfcake.version}</version>
+            <version>5.0</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.netbeans.api</groupId>
@@ -180,7 +181,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <perfcake.version>4.1</perfcake.version>
+        <perfcake.version>5.0</perfcake.version>
     </properties>
     <description>Graphical PerfCake scenario editor for NetBeans</description>
 </project>
