Sender's target is now has a standalone textfield in wizard as opposed to a being in properties table.
Some code cleanup.
Pom file now contains perfcake version as a property.

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
         <dependency>
             <groupId>org.perfcake</groupId>
             <artifactId>perfcake</artifactId>
-            <version>5.0</version>
+            <version>${perfcake.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -181,7 +181,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <perfcake.version>5.0</perfcake.version>
+        <perfcake.version>5.1</perfcake.version>
     </properties>
     <description>Graphical PerfCake scenario editor for NetBeans</description>
 </project>
