--- a/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
+++ b/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
@@ -88,3 +88,5 @@ MessageVisualPanel.deleteProperties.text=Delete
 ScenarioPropertiesVisualPanel.addPropertyButton.text=Add
 ScenarioPropertiesVisualPanel.deletePropertyButton.text=Delete
 ReportingVisualPanel.reportersLabel.text=Reporters:
+SenderVisualPanel.targetLabel.text=Target
+SenderVisualPanel.targetTextField.text=
