--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <perfcake.version>5.1</perfcake.version>
+        <perfcake.version>6.0-SNAPSHOT</perfcake.version>
     </properties>
     <description>Graphical PerfCake scenario editor for NetBeans</description>
     <licenses>
