Added labels to run wizard, reporters now show when they are enabled/disabled. Validators now show ID in their body and not header.

--- a/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
+++ b/src/main/resources/org/perfcake/pc4nb/ui/wizards/visuals/Bundle.properties
@@ -26,7 +26,6 @@ MessageVisualPanel.propertiesLabel.text=Properties:
 MessageVisualPanel.contentTextField.text=
 MessageVisualPanel.headersLabel.text=Headers:
 MessageVisualPanel.contentLabel.text=Content:
-MessageVisualPanel.editHeaderButton.text=Edit
 MessageVisualPanel.deleteHeaderButton.text=Delete
 MessageVisualPanel.multiplicityLabel.text=Multiplicity:
 MessageVisualPanel.addHeaderButton.text=Add
@@ -90,3 +89,5 @@ ScenarioPropertiesVisualPanel.deletePropertyButton.text=Delete
 ReportingVisualPanel.reportersLabel.text=Reporters:
 SenderVisualPanel.targetLabel.text=Target
 SenderVisualPanel.targetTextField.text=
+RunVisualPanel.runTypeLabel.text=Type:
+RunVisualPanel.runValueLabel.text=Value:
